# library-catalog-fastapi

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 10ac34484915_add_created_at_and_updated_at_to_books.py  275334a663ad_initial_migration.py  53249366b5ce_create_books_table.py  6d901544a0d7_initial_migration.py  972d77feadc7_initial.py
src/library_catalog/: main.py
src/library_catalog/api/: dependencies.py
src/library_catalog/api/v1/routers/: books.py  health.py
src/library_catalog/api/v1/schemas/: book.py  common.py
src/library_catalog/core/: config.py  database.py  exceptions.py  logging_config.py
src/library_catalog/data/models/: book.py
src/library_catalog/data/repositories/: base_repository.py  book_repository.py
src/library_catalog/domain/: exceptions.py
src/library_catalog/domain/mappers/: book_mapper.py
src/library_catalog/domain/services/: book_service.py
