[project]
name = "library-catalog"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel",email = "daniilkacuk@gmail.com"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.17,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)"
]
